tests/invalid/Template_Invalid_13.whiley
type Ref<T> is { T data } where data >= 0
